add frontend project